package protocol;

option java_package = "protocol.Msg";

message SendChatReq{
	required ChatData chatData = 1;

}
message SendChatRsp{
	enum ResultCode{
    	SUCCESS = 0;
		FAIL = 1;
	}

	required ResultCode resultCode = 1;
}
